GNOME Bugzilla – Bug 675525
Fix compiler warnings on mingw-w64
Last modified: 2012-05-09 07:40:30 UTC
Warnings on mingw-w64: gstpoll.c:75:0: error: "EINPROGRESS" redefined /usr/x86_64-w64-mingw32/sys-root/mingw/include/errno.h:158:0: note: this is the location of the previous definition gstsystemclock.c:55:0: error: "EWOULDBLOCK" redefined /usr/x86_64-w64-mingw32/sys-root/mingw/include/errno.h:166:0: note: this is the location of the previous definition gstfilesrc.c:50:0: error: "stat" redefined /usr/x86_64-w64-mingw32/sys-root/mingw/include/sys/stat.h:258:0: note: this is the location of the previous definition And in tests/check: gst/gstpoll.c:29:0: error: "EINPROGRESS" redefined elements/filesrc.c:408:1: error: ‘check_uri_for_uri’ defined but not used elements/filesrc.c:436:1: error: ‘check_uri_for_location’ defined but not used EINPROGRESS is not used anywhere in gstreamer code, so I assume it can be safely removed.
Created attachment 213516 [details] [review] Fix compiler warnings on mingw-w64
commit 63234a9dab0e92642666de278cd61a87ca40f394 Author: Raimo Järvi <raimo.jarvi@gmail.com> Date: Sat May 5 22:17:43 2012 +0300 gst: Fix compiler warnings on mingw-w64 https://bugzilla.gnome.org/show_bug.cgi?id=675525