tests/check/gst/gstpoll.c
@@ -26,7 +26,6 @@
 #ifdef G_OS_WIN32
 #include <winsock2.h>
 #include <fcntl.h>
-#define EINPROGRESS WSAEINPROGRESS
 #else
 #include <sys/socket.h>
 #endif
